# crabdroid

./: CONTRIBUTING.md  LICENSE  README.md  SIGNAL_PATH.md  TROUBLESHOOTING.md  package-lock.json  settings.gradle.kts  setup.sh
app/: build.gradle.kts
app/src/androidTest/kotlin/com/babyscratch/ui/: MainScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/cpp/: AudioFileLoader.cpp  CMakeLists.txt  Resampler.h  ScratchEngine.cpp  dr_wav.h
app/src/main/kotlin/com/babyscratch/: MainActivity.kt
app/src/main/kotlin/com/babyscratch/audio/: MicRecorder.kt  ScratchEngine.kt
app/src/main/kotlin/com/babyscratch/ui/: MainScreen.kt  TurntableView.kt
app/src/main/kotlin/com/babyscratch/ui/controls/: BeatLoopButton.kt  PitchSlider.kt  TransformButton.kt  VolumeFader.kt
app/src/main/kotlin/com/babyscratch/viewmodel/: ScratchViewModel.kt
app/src/main/res/raw/: README.md
app/src/test/kotlin/com/babyscratch/viewmodel/: ScratchViewModelTest.kt
src/: App.tsx
